--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "Thomas-Model-View-Controller-MVC-Tech-Blog",
+    "name": "-MVC-Tech-Blog",
     "version": "1.0.0",
     "description": "",
     "main": "server.js",
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/ThomasCalle/Thomas-Model-View-Controller-MVC-Tech-Blog.git"
+        "url": "git+https://github.com/hementB2/-MVC-Tech-Blog.git"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,9 +15,9 @@
     "author": "",
     "license": "ISC",
     "bugs": {
-        "url": "https://github.com/ThomasCalle/Thomas-Model-View-Controller-MVC-Tech-Blog/issues"
+        "url": "https://github.com/hementB2/-MVC-Tech-Blog/issues"
     },
-    "homepage": "https://github.com/ThomasCalle/Thomas-Model-View-Controller-MVC-Tech-Blog#readme",
+    "homepage": "https://github.com/hementB2/-MVC-Tech-Blog#readme",
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "connect-session-sequelize": "^7.0.4",
